# AlbaOS-Rusty

./: README.md
albaos/: Cargo.toml
albaos/.cargo/: config.toml
albaos/src/: main.rs  vga_buffer.rs
