[package]
name = "albaos"
version = "0.1.0"
edition = "2018"

# more stuff because disable stack unwindng
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6" # dont optimise volatile writes

[dependencies.lazy_static] #init statics at runtime insted of compile time
version = "1.0"
features = ["spin_no_std"] # we are not link agaist stdlib
